# GoTron

./: CMakeLists.txt
docs/: README.md  _config.yml  index.md
docs/210-conception/SRS/: PolyTron-SRS-v1.0-DRAFT.ods
docs/memos/website/: init-jekyll.md
src/: CMakeLists.txt  main.c
src/core/: CMakeLists.txt  TBool.h  TContext.h  TPosition2D.h  audio.c  audio.h  grid.c  grid.h  input.c  input.h
src/core/data/: highscores.c  highscores.h
src/core/log/: log.h
src/ui/: CMakeLists.txt  ui.c  ui.h  ui_game.c  ui_game.h  ui_menus.c  ui_menus.h  ui_mode_pvp.c  ui_mode_pvp.h  ui_mode_survival.c  ui_mode_survival.h  ui_private.c  ui_private.h  ui_styles.c  ui_styles.h  ui_text.c  ui_text.h
tests/: CMakeLists.txt
tests/auto/: CMakeLists.txt  cunit-core-gridData.c  cunit-core-gridData.h  cunit-main.c
tests/manu/: CMakeLists.txt  test-core_data_highscores.c  test-core_input.c  test-gridData.c  test-ui_game.c
